# jarvis-dev

./: .gitignore  CHECKSUMS.txt  JARVIS.md  MANIFEST.in  Makefile  README.md  cli.py  install.sh  jarvis  jarvis.rb  pyproject.toml  setup.cfg  setup.py
core/: agent.py  auth.py  brain.py  config.py  dashboard.py  deps.py  gemini_box.py  handler.py  health.py  logger.py  menus.py  nave_loop.py  perplexity_like.py  prompts.py  repair.py  services.py  startup.py  ui.py  update.py
jarvis_dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memory/: vector.py
pip-wheel-metadata/jarvis_dev-0.2.6.dist-info/: METADATA
pip-wheel-metadata/jarvis_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_intent_parser.py  test_services.py
tools/: analytics.py  editor.py  hardware.py  network.py  python_agent.py  search.py  server.py  shell.py
voice/: voice.py
watcher/: monitor.py
