[metadata]
license_files = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    typer
    rich
    requests
    watchdog
    sounddevice
    scipy
    numpy
    sentence-transformers
    faiss-cpu

[options.extras_require]
dev =
    pytest
    black

# [options.entry_points] is removed as it's handled by pyproject.toml
